--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
